2008-05-09  Sankar P  <psankar@novell.com>

	** Fix for bug #531519

	* em-format-html-display.c: (efhd_message_update_bar):
	Evolution crashes on print-preview.

	** Committed on behalf of Srinivasa Ragavan <sragavan@novell.com>

2008-05-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #424744

	* em-composer-prefs.c:
	* em-format-html.c:
	* em-format-quote.c:
	* em-mailer-prefs.c:
	Use camel-iconv.c instead of e-iconv.h (now deprecated).

2008-05-06  Matthew Barnes  <mbarnes@redhat.com>

	* mail-component.c (mail_component_show_logger):
	Use the GtkCellRendererText's "markup" property for error messages.

2008-05-05  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #531426

	* em-format-html.c (efh_format_headers):
	Display face header images at 48x48 instead of 64x64.
	Patch from Roland Clobus.

2008-05-04  Matthew Barnes  <mbarnes@redhat.com>

	* mail-component.c (mail_component_show_logger):
	Fix up the Debug Logs window a bit:
	- Add a Close button.
	- Fix some spacing issues (HIG compliance).
	- Just show the log level icon.  Add a tooltip for the icon showing
	  a description of the log level (Error/Warning/Debug).  Also, avoid
	  using e-icon-factory.  Set the GtkCellRendererPixbuf's "stock-id"
	  and "stock-size" properties instead.
	- Use GConfBridge to track the user's log level preference.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #528288

	* em-folder-browser.c: (emfb_init), (em_folder_browser_show_wide):
	Ensure minimum size for preview and message list.
	* em-folder-browser.c: (get_view_query):
	Distinguish between no filter and custom filter.
	* message-list.c: (regen_list_done):
	Set info message to tree when no message shown in a list.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #530245

	* searchtypes.xml: Let searches work with labels again.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #467892

	* em-folder-view.c: (em_folder_view_open_selected):